RDM-10633 introduce befta fw